Native/OpenDDSWrapper/TcpInst.h

EXTERN_METHOD_EXPORT
::OpenDDS::DCPS::TcpInst *TcpInst_new(::OpenDDS::DCPS::TransportInst *inst);
EXTERN_METHOD_EXPORT
CORBA::Boolean TcpInst_GetIsReliable(::OpenDDS::DCPS::TcpInst *ti);
EXTERN_METHOD_EXPORT
CORBA::Int32 TcpInst_GetSendBufferSize(::OpenDDS::DCPS::TcpInst *ti);
EXTERN_METHOD_EXPORT
void TcpInst_SetSendBufferSize(::OpenDDS::DCPS::TcpInst *ti, CORBA::Int32 value);